--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "packageManager": "bun@1.2.18",
   "workspaces": [
     "apps/*",
-    "packages/*"
-  ]
+    "packages/*",
+    "packages/modules/*"
+  ],
+  "dependencies": {
+    "vite-tsconfig-paths": "^5.1.4"
+  }
 }
