--- a/packages/libs/tsconfig.json
+++ b/packages/libs/tsconfig.json
@@ -1,8 +1,8 @@
 {
-  "extends": "@repo/typescript-config/vite.json",
+  "extends": "@repo/typescript-config/react-library.json",
   "include": ["src"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
-    "jsx": "react-jsx",
     "paths": {
       "@/*": ["./src/*"]
     }
